--- a/RPGVXAcecn/intro/109_graphics.html
+++ b/RPGVXAcecn/intro/109_graphics.html
@@ -19,7 +19,7 @@
 <p>在 RGSS 游戏库中最重要的应当是 <a href="../rgss/gm_graphics.html">Graphics</a> 模块。
 它是用来处理游戏中所有图片的方法集合，在游戏的画面中显示图片，
 就要使用到该模块的功能。</p>
-<p>所谓<strong>模块</strong>，可以考虑成收集了相同范围方法的如容器那样的东西，和类有相似之处。然而模块却不能生成的实例，也没有那个必要。</p>
+<p>所谓<strong>模块</strong>，可以考虑成收集了相同范围方法的如容器那样的东西，和类有相似之处。然而模块却不能生成实例，也没有那个必要。</p>
 <p>那么首先，请按下面那样输入。</p>
 <pre>
 loop do
