--- a/RPGVXAcecn/rgss/g_index.html
+++ b/RPGVXAcecn/rgss/g_index.html
@@ -34,7 +34,7 @@
     <li><a href="gm_input.html">Input</a></li>
     <li><a href="gm_rpg.html">RPG</a></li>
   </ul></li>
-  <li><a href="g_rpg_data.html">VX Ace 数据结构</a>
+  <li><a href="g_rpg_data.html">RPGVXAce 数据结构</a>
   <ul>
     <li><a href="gc_rpg_map.html">RPG::Map</a></li>
     <li><a href="gc_rpg_map_encounter.html">RPG::Map::Encounter</a></li>
