--- a/RPGVXAcecn/rgss/gc_window.html
+++ b/RPGVXAcecn/rgss/gc_window.html
@@ -42,8 +42,7 @@ type=text/css href="../style.css">
   <DT>windowskin
   <DD>
   <P>引用一个位图（<A href="gc_bitmap.html">Bitmap</A>）作为窗口的外观。</P>
-  <P>外观规格和 RMVX 基本相同，具体规格请参见 <A
-  href="../rpgvx/resource.html#windowskin">窗口外观的具体规格</A>。</P>
+  <P>外观规格和 RMVX 基本相同，具体规格请参见 <A href="../rpgvxace/6100_resource.html#windowskin">素材规格：窗口皮肤</A>。</P>
   <DT>contents
   <DD>
   <P>引用作为窗口内容的位图（<A href="gc_bitmap.html">Bitmap</A>）。</P>
