--- a/RPGVXAcecn/rgss/sc_array.html
+++ b/RPGVXAcecn/rgss/sc_array.html
@@ -213,7 +213,7 @@ p array          # =&gt; [1, 2, 3, 4, [5, 6], 7, 8]</PRE>
   <DT>reverse
   <DT>reverse!
   <DD>
-  <P>reverse 返回一个与原数组元素顺序相反的辛数组。reverse! 则是执行破坏性更新。</P>
+  <P>reverse 返回一个与原数组元素顺序相反的新数组。reverse! 则是执行破坏性更新。</P>
   <P>reverse 总是返回一个新的数组，而 reverse! 返回
 <VAR>self</VAR>。</P>
   <DT>shift
