--- a/RPGVXAcecn/rgss/sc_string.html
+++ b/RPGVXAcecn/rgss/sc_string.html
@@ -110,7 +110,7 @@ p "foo".to_sym.to_s == "foo"        # =&gt; true
   <DT>length
   <DT>size
   <DD>
-  <P>返回字符串的长度（字节数）。</P>
+  <P>返回字符串的长度（字符数）。</P>
   <DT><A name=L001412>scan(<VAR>re</VAR>)</A>
   <DT>scan(<VAR>re</VAR>) {|<VAR>s</VAR>| ... }
   <DD>
