--- a/RPGVXAcecn/rgss/sc_integer.html
+++ b/RPGVXAcecn/rgss/sc_integer.html
@@ -14,93 +14,93 @@ href="sc_fixnum.html">Fixnum</A> 和
   <LI><A href="sc_numeric.html">Numeric</A> </LI></UL>
 <H2>方法</H2>
 <DL>
-  <DT>self[nth] 
+  <DT>self[nth]
   <DD>
   <P>若是整数的第 nth 位（LSB &#9472;
   最低意义位 &#9472; 是第 0 位）是 1 就返回 1，否则返回 0。</P>
-  <P>self[nth]=bit 则不是 Integer 方法，因为与相关的 Numeric 类不变。</P>
-  <DT><VAR>self</VAR> + <VAR>other</VAR> 
-  <DT><VAR>self</VAR> - <VAR>other</VAR> 
-  <DT><VAR>self</VAR> * <VAR>other</VAR> 
-  <DT><VAR>self</VAR> / <VAR>other</VAR> 
-  <DT><VAR>self</VAR> % <VAR>other</VAR> 
-  <DT><VAR>self</VAR> ** <VAR>other</VAR> 
+  <P>self[nth]=bit 不是 Integer 方法，因为与 Numeric 有关的类都是不可变的。</P>
+  <DT><VAR>self</VAR> + <VAR>other</VAR>
+  <DT><VAR>self</VAR> - <VAR>other</VAR>
+  <DT><VAR>self</VAR> * <VAR>other</VAR>
+  <DT><VAR>self</VAR> / <VAR>other</VAR>
+  <DT><VAR>self</VAR> % <VAR>other</VAR>
+  <DT><VAR>self</VAR> ** <VAR>other</VAR>
   <DD>
   <P>数学运算符。分别计算：和（加）、差（减）、积（乘）、商（除）、余（模数计算）、幂（指数计算）。</P>
-  <DT><VAR>self</VAR> &lt;=&gt; <VAR>other</VAR> 
+  <DT><VAR>self</VAR> &lt;=&gt; <VAR>other</VAR>
   <DD>
   <P>比较 other 与 self；若是 self 大于 other 则返回正整数、若是 self 等于 other
   则返回 0、若是 self 小于 other 则返回负整数。</P>
-  <DT><VAR>self</VAR> == <VAR>other</VAR> 
-  <DT><VAR>self</VAR> &lt; <VAR>other</VAR> 
-  <DT><VAR>self</VAR> &lt;= <VAR>other</VAR> 
-  <DT><VAR>self</VAR> &gt; <VAR>other</VAR> 
-  <DT><VAR>self</VAR> &gt;= <VAR>other</VAR> 
+  <DT><VAR>self</VAR> == <VAR>other</VAR>
+  <DT><VAR>self</VAR> &lt; <VAR>other</VAR>
+  <DT><VAR>self</VAR> &lt;= <VAR>other</VAR>
+  <DT><VAR>self</VAR> &gt; <VAR>other</VAR>
+  <DT><VAR>self</VAR> &gt;= <VAR>other</VAR>
   <DD>
   <P>比较运算符。</P>
-  <DT>~ <VAR>self</VAR> 
-  <DT><VAR>self</VAR> | <VAR>other</VAR> 
-  <DT><VAR>self</VAR> &amp; <VAR>other</VAR> 
-  <DT><VAR>self</VAR> ^ <VAR>other</VAR> 
+  <DT>~ <VAR>self</VAR>
+  <DT><VAR>self</VAR> | <VAR>other</VAR>
+  <DT><VAR>self</VAR> &amp; <VAR>other</VAR>
+  <DT><VAR>self</VAR> ^ <VAR>other</VAR>
   <DD>
   <P>位运算符。分别计算位的逻辑非、逻辑或、逻辑与、逻辑异或。</P>
-  <DT><VAR>self</VAR> &lt;&lt; <VAR>bits</VAR> 
-  <DT><VAR>self</VAR> &gt;&gt; <VAR>bits</VAR> 
+  <DT><VAR>self</VAR> &lt;&lt; <VAR>bits</VAR>
+  <DT><VAR>self</VAR> &gt;&gt; <VAR>bits</VAR>
   <DD>
   <P>移动运算符，将位左移或右移。</P>
   <P>符号位（MSB &#9472; 最大意义位）在右移时会保留。</P>
-  <DT>chr 
+  <DT>chr
   <DD>
   <P>返回在字符表中数字对应的 1 位字符串。举例来说：65.chr 返回 "A"。</P>
   <P>使用这个方法的整数必须在 0～255的范围内。超出此范围的整数会抛出 <A
-  href="s_exceptions.html#RangeError">RangeError（异常：范围错误）</A> 异常。</P>
+  href="s_exceptions.html#RangeError">RangeError</A> 异常。</P>
   <DT><A name=L001200>downto(<VAR>min</VAR>) {|<VAR>n</VAR>| ...
-  }</A> 
+  }</A>
   <DD>
   <P>自 self 迭代至 <VAR>min</VAR>，依次迭减 1。若 self &lt;
   <VAR>min</VAR>，则什么都不做。</P>
   <DD>
-  <P>参看 <A href="#L001211">upto</A>, <A href="#L001203">step</A>&nbsp;和 <A
-  href="#L001204">times</A>&nbsp;。</P>
-  <DT>next 
-  <DT>succ 
+  <P>参看 <A href="#L001211">upto</A>, <A href="#L001203">step</A> 和 <A
+  href="#L001204">times</A> 。</P>
+  <DT>next
+  <DT>succ
   <DD>
   <P>返回整数的「下」一个值。</P>
   <DT><A name=L001203>step(<VAR>limit</VAR>, <VAR>step</VAR>)
-  {|<VAR>n</VAR>| ... }</A> 
+  {|<VAR>n</VAR>| ... }</A>
   <DD>
   <P>从 self 依次计算区块，每次增加 <VAR>step</VAR>直到 <VAR>limit</VAR>
   。<VAR>step</VAR> 可以是负数。</P>
   <P>当 <VAR>step</VAR> 设为 0 时，抛出 <A
-  href="s_exceptions.html#ArgumentError">ArgumentError（异常：参数错误）</A>&nbsp;异常。</P>
+  href="s_exceptions.html#ArgumentError">ArgumentError</A> 异常。</P>
   <P>返回 self。</P>
-  <P>参看 <A href="#L001211">upto</A>, <A href="#L001200">downto</A>&nbsp;和 <A
+  <P>参看 <A href="#L001211">upto</A>, <A href="#L001200">downto</A> 和 <A
   href="#L001204">times</A>。</P>
   <DT><A name=L001204>times {|<VAR>n</VAR>| ...
-  }</A> 
+  }</A>
   <DD>
   <P>依次迭代执行 self 次，从 0 至 self-1。若 self 为负数，则什么都不做。</P>
   <P>返回 self。</P>
-  <P>参看 <A href="#L001211">upto</A>, <A href="#L001200">downto</A>&nbsp;和 <A
-  href="#L001203">step</A>&nbsp;。</P>
-  <DT>to_f 
+  <P>参看 <A href="#L001211">upto</A>, <A href="#L001200">downto</A> 和 <A
+  href="#L001203">step</A> 。</P>
+  <DT>to_f
   <DD>
   <P>将数值转换成浮点数（<A href="sc_float.html">Float</A>）。</P>
-  <DT>to_s([<VAR>base</VAR>]) 
+  <DT>to_s([<VAR>base</VAR>])
   <DD>
   <P>将整数转为 10 进制的字符串表达式。</P>
   <P>若是指定了参数，则会进行 base 进制的转换。若 base 超出 2～36 的范围，会抛出 <A
-  href="s_exceptions.html#ArgumentError">ArgumentError（异常：参数错误）</A> 异常。 </P><PRE>p 10.to_s(2)    # =&gt; "1010"
+  href="s_exceptions.html#ArgumentError">ArgumentError</A> 异常。 </P><PRE>p 10.to_s(2)    # =&gt; "1010"
 p 10.to_s(8)    # =&gt; "12"
 p 10.to_s(16)   # =&gt; "a"
 p 35.to_s(36)   # =&gt; "z"
 </PRE>
   <DT><A name=L001211>upto(<VAR>max</VAR>) {|<VAR>n</VAR>| ...
-  }</A> 
+  }</A>
   <DD>
   <P>自 self 迭代至 <VAR>max</VAR>，依次迭加 1。若 self &gt;
   <VAR>max</VAR>，则什么都不做。</P>
   <P>返回 self。</P>
-  <P>参看 <A href="#L001200">downto</A>, <A href="#L001203">step</A>&nbsp;和 <A
+  <P>参看 <A href="#L001200">downto</A>, <A href="#L001203">step</A> 和 <A
   href="#L001204">times</A>。</P></DD></DL>
 <H6></H6></BODY></HTML>
