--- a/RPGVXAcecn/rgss/sm_math.html
+++ b/RPGVXAcecn/rgss/sm_math.html
@@ -61,10 +61,10 @@ tanh(x) = sinh(x) / cosh(x)
   </FONT><FONT class=post>指数与假数</FONT>）。</P>
   <DT>Math.hypot(<VAR>x</VAR>, <VAR>y</VAR>)
   <DD>
-  <P>返回&nbsp;sqrt(x*x + y*y)。（sqrt为求平方根函数，也即是求x、y在直角三角形中的斜边）</P>
+  <P>返回 sqrt(x*x + y*y)。</P>
   <DT>Math.ldexp(<VAR>x</VAR>, <VAR>exp</VAR>)
   <DD>
-  <P>返回实数 x 乘以 2 的 exp 幂数的最终结果。（x * 2<SUP>exp</SUP>）&nbsp;</P>
+  <P>返回实数 x 乘以 2 的 exp 次方。</P>
   <DT>Math.log(<VAR>x</VAR>)
   <DD>
   <P>返回 x 的自然对数。<VAR></VAR></P>
@@ -82,7 +82,7 @@ tanh(x) = sinh(x) / cosh(x)
   异常。</P>
   <DT>Math.sqrt(<VAR>x</VAR>)
   <DD>
-  <P>返回 <VAR>x</VAR> 的平方根号。若 <VAR>x</VAR> 为负数，抛出 <A
+  <P>返回 <VAR>x</VAR> 的平方根。若 <VAR>x</VAR> 为负数，抛出 <A
   href="s_exceptions.html#ArgumentError">ArgumentError</A> 异常。</P>
   <P>通常负数会抛出 <A href="s_exceptions.html#Errno">Errno::EDOM</A> 异常。</P></DD></DL>
 <H2>定数</H2>
