--- a/RPGVXAcecn/rgss/sm_math.html
+++ b/RPGVXAcecn/rgss/sm_math.html
@@ -26,7 +26,7 @@ type=text/css href="../style.css">
   <DT>Math.asinh(<VAR>x</VAR>)
   <DT>Math.atanh(<VAR>x</VAR>)
   <DD>
-  <P>返回 x 的反双曲线函数计算值。</P><PRE>asinh(x) = log(x + sqrt(x * x + 1))
+  <P>返回 x 的反双曲函数计算值。</P><PRE>asinh(x) = log(x + sqrt(x * x + 1))
 acosh(x) = log(x + sqrt(x * x - 1)) [x &gt;= 1]
 atanh(x) = log((1+x)/(1-x)) / 2     [-1 &lt; x &lt; 1]
 </PRE>
@@ -43,7 +43,7 @@ atanh(x) = log((1+x)/(1-x)) / 2     [-1 &lt; x &lt; 1]
   <DT>Math.sinh(<VAR>x</VAR>)
   <DT>Math.tanh(<VAR>x</VAR>)
   <DD>
-  <P>返回 x 的双曲线函数计算值。</P><PRE>cosh(x) = (exp(x) + exp(-x)) / 2
+  <P>返回 x 的双曲函数计算值。</P><PRE>cosh(x) = (exp(x) + exp(-x)) / 2
 sinh(x) = (exp(x) - exp(-x)) / 2
 tanh(x) = sinh(x) / cosh(x)
 </PRE>
