--- a/RPGVXAcecn/rgss/rgss.html
+++ b/RPGVXAcecn/rgss/rgss.html
@@ -19,7 +19,7 @@ type=text/css href="../style.css">
     <LI><A href="#ext_lib">扩展库</A>
     <LI><A href="#character_code">字符集</A>
     <LI><A href="#property">属性</A> </LI></UL></LI></UL>
-<H2><A name=whats_new>RGSS3 的新功能</A><SPAN class=rgss3>(RGSS3)</SPAN> 、</H2>
+<H2><A name=whats_new>RGSS3 的新功能</A><SPAN class=rgss3>(RGSS3)</SPAN></H2>
 <P>RGSS3 是内置于 RPG Maker VX Ace 的一套脚本系统， 和 RMVX 中的 RGSS2
 比起来有很多的不同之处，主要的变化如下：</P>
 <UL>
