--- a/RPGVXAcecn/rgss/syntax01.html
+++ b/RPGVXAcecn/rgss/syntax01.html
@@ -13,10 +13,10 @@ type=text/css href="../style.css">
   <LI><A href="#L000219">表达式</A> </LI></UL>
 <P>Ruby 是会区分大小写字母的编程语言。除了标识符和部分的字面值以外，可以在任何需要之处使用空格符（包括空格、space、tab、垂直
 tab、backspace、归位、换页）或注释。换行字符只有在明显表示语句尚未结束时（例如以","结尾），才会被当作空格符，否则视为断句符号。</P>
-<H2>标示符</H2>
+<H2>标识符</H2>
 <P>例如：</P><PRE>foobar
 ruby_is_simple</PRE>
-<P>Ruby 的标识符以字母或是下划线（ _ ）开头，并以字母、数字或下划线组成，长度不限。</P>
+<P>Ruby 的标识符以字母或是下划线（_）开头，并以字母、数字或下划线组成，长度不限。</P>
 <H2>注释</H2>
 <P>例如：</P><PRE># 这是一行注释<BR></PRE>
 <P>除了内嵌表达式，在井号（#）后面的文字一概视为注释。</P>
