--- a/RPGVXAcecn/rpgvxace/2130_map_operation.html
+++ b/RPGVXAcecn/rpgvxace/2130_map_operation.html
@@ -24,7 +24,7 @@
 <dd><p>打开<B>地图设置</B>对话框。更多相关的信息，请参见<a href="2140_map_setting.html">地图数据的设置</a>。</p></dd>
 
 <dt>读取范例地图</dt>
-<img src="img/2130_01.png" alt="Load Sample Map" class="float_r">
+<img src="img/2130_01.png" alt="读取范例地图" class="float_r">
 <dd><p>基于已有的数据创建新的地图数据。单击列表中的地图名，查看它的内容，然后点击<B>确定</B>就可以了。</p><br></dd>
 
 <dt>复制</dt>
@@ -40,13 +40,13 @@
 <dd><p>整体移动地图的位置。要确定移动的方向和移动的距离（图块数）。</p></dd>
 
 <dt><a name="key_map_operation_dungeon">随机生成迷宫</a></dt>
-<img src="img/2130_02b.png" alt="Generate Dungeon B" class="float_r"> <img src="img/2130_02a.png" alt="Generate Dungeon A" class="float_r">
+<img src="img/2130_02b.png" alt="随机生成迷宫B" class="float_r"> <img src="img/2130_02a.png" alt="随机生成迷宫A" class="float_r">
 <dd><p>自动生成一个迷宫地图。通过确定用于地面和墙壁的图块，你可以迅速得到一个由被廊道连接起来的数个小室组成的迷宫地图。</p>
 <p>迷宫会覆盖整个地图，所以如果你想要一个大的迷宫，只需要先创建一个大的地图。如果地图太小，自动生成迷宫的效果不是很好。</p><br></dd>
 </dl></dd></dl>
 
 <h2>地图分组</h2>
-<img src="img/2130_03.png" alt="Grouping Maps" class="float_r" style="border:1px solid #000000">
+<img src="img/2130_03.png" alt="地图分组" class="float_r" style="border:1px solid #000000">
 
 <p>如果想要把某个地图放在和它相关的其他地图附近，只需要在地图列表中拖动它。这对于通过分组管理地图而言非常实用，比如把室内地图放在城镇地图下。只需要把地图拖拽到工程名下就可以把底层地图移动到顶层。</p>
 <p>这种分层显示地图只在地图列表中有意义，它对于地图内容、设置等方面没有任何影响。<br></p>
