--- a/RPGVXAcecn/rpgvxace/2140_map_setting.html
+++ b/RPGVXAcecn/rpgvxace/2140_map_setting.html
@@ -9,13 +9,13 @@
 <body>
 <h1><a name="key_map_setting">地图数据的设置</a></h1>
 
-<h2>新建地图对话框</h2>
+<h2>新建地图</h2>
 
 <p><B>新建地图</B>对话框会在新建地图的时候出现，在进行<B>地图设置</B>的时候也会弹出一个一样的对话框。这种对话框允许你创建或者编辑一个地图，设置它的大小、使用的图块组、背景音乐、遇敌条件和其它会影响游戏内容的项目。</p>
 
 <h2>可用的设定</h2>
 
-<div align="center"><img src="img/2140_01.png" alt="Create Map dialog box"></div>
+<div align="center"><img src="img/2140_01.png" alt="新建地图"></div>
 
 <dl>
 <dt>备注名称</dt>
@@ -46,7 +46,7 @@
 
 <dt><a name="battlebg">指定战斗背景图像</a></dt>
 <dd>
-	<img src="img/2140_03.png" alt="Specify Battle Background" class="float_r">
+	<img src="img/2140_03.png" alt="指定战斗背景图像" class="float_r">
 	<p>如果被选中，这个设置将会使你指定的一个两张图片的组合作为战斗的背景（当战斗发生在这个地图上的时候）。</p>
 	<p>如果没有被选中，战斗背景就取决于该地图的<B>图块组</B>的<a href="3310_db_tileset.html#mode">模式</a>.</p><br>
 	<dl>
@@ -76,7 +76,7 @@
 
 <dt><a name="key_map_setting_encounter">遇敌</a></dt>
 <dd>
-<img src="img/2140_04.png" alt="Encounters" class="float_r">
+<img src="img/2140_04.png" alt="遇敌" class="float_r">
 <p>指定玩家在地图上移动时会随机碰见的敌人。在区域内双击就会打开一个对话框，然后你就可以设定下面所说的项目。在已有的敌群上右键会弹出一个菜单，里面有复制、粘贴、删除等选项</p>
 
 <dl>
@@ -99,7 +99,7 @@
 
 <h2><a name="key_map_setting_region">设置区域</a></h2>
 
-<img src="img/2140_02.png" alt="Regions" class="float_r">
+<img src="img/2140_02.png" alt="设置区域" class="float_r">
 <p>在<B>敌群</B>对话框中指定的区域就是表明敌群可能出现的地方的范围。每个地图最多可以被分为63个区域。</p>
 <p>要设置区域，请单击工具栏中的<B>区域</B>按钮（或者在<B>模式</B>菜单中选择<B>区域</B>）来切换编辑模式。然后，在窗体左边的区域框里选中一个区域ID（1到63），然后在地图上单击，就可以为该位置（图块）设置特定的ID。每个位置（图块）只能有一个ID。</p>
 
